--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -1,3 +1,8 @@
+    <script>
+        today = new Date().toISOString().split(":")[0]+":00";
+        document.getElementById("time").setAttribute("min",today)
+    </script>
+
     <script src="/js/main.js"></script>
     
 </body>
