--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -7,7 +7,7 @@
                 <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
             </li>
             <li class="main-header__item">
-                <a class="<%= path === '/matches' ? 'active' : '' %>" href="/matches">Mathces</a>
+                <a class="<%= path === '/matches' ? 'active' : '' %>" href="/matches">Matches</a>
             </li>
             <% if (isAuthenticated) { %>
                 <li class="main-header__item">
@@ -44,7 +44,7 @@
             <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
         </li>
         <li class="mobile-nav__item">
-            <a class="<%= path === '/matches' ? 'active' : '' %>" href="/matches">Mathces</a>
+            <a class="<%= path === '/matches' ? 'active' : '' %>" href="/matches">Matches</a>
         </li>
         <% if (isAuthenticated) { %>
             <li class="mobile-nav__item">
