--- a/public/css/login.css
+++ b/public/css/login.css
@@ -202,8 +202,6 @@ iframe {
   text-align: center;
 }
 
-
-
 /*------------------------------------------------------------------
 [ Input ]*/
 
@@ -234,6 +232,18 @@ iframe {
   padding: 0 7px 0 43px;
 }
 
+.input100-invalid {
+  font-family: Poppins-Medium;
+  font-size: 16px;
+  color: #333333;
+  line-height: 1.2;
+  border: 1px solid red;
+  display: block;
+  width: 100%;
+  height: 55px;
+  background: transparent;
+  padding: 0 7px 0 43px;
+}
 
 /*---------------------------------------------*/
 .focus-input100 {
