--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,67 +7,33 @@
 
 <body>
    <%- include('../includes/navigation.ejs') %>
-    <!-- <main>
-        <form class="login-form" action="/login" method="POST" novalidate>
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <div class="form-control">
-                <label for="email">E-mail</label>
-                <input 
-                    class="<%= (errorMessage) ? 'invalid' : '' %>"
-                    type="email" name="email" id="email" value="<%= oldInput.email %>"
-                >
-            </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input 
-                    class="<%= (errorMessage) ? 'invalid' : '' %>"
-                    type="password" name="password" id="password" value="<%= oldInput.password %>">
-            </div>
-            <button class="btn" type="submit">Login</button>
-            <a class="button google" href="/login/federated/google">Sign in with Google</a>
-        </form>
-        <br>
-        <% if (errorMessage) { %>
-            <div class="user-message user-message--error"><%= errorMessage %></div>
-        <% } %>
-    </main> -->
-
     <div class="limiter">
 		<div class="container-login100" style="background-image: linear-gradient(135deg, #2f1cbb, #0e3247)">
-			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-				<form class="login100-form validate-form" action="/login" method="POST" novalidate>
-                    
-					<span class="login100-form-title p-b-49">
-						Login
-					</span>
-
+			<div class="wrap-login100 p-l-55 p-r-55 p-t-60 p-b-54">
+				<form class="login100-form validate-form" action="/login" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
+					<span class="login100-form-title p-b-49">Login</span>
+					<% if (errorMessage) { %>
+						<div class="flex-c-m">
+							<div class="popout error-message"><%= errorMessage %></div>
+                        </div>
+					<% } %>
+					<div class="wrap-input100 validate-input m-b-23">
 						<span class="label-input100">E-mail</span>
 						<input
-                            <% if (errorMessage) { %>
-                                style="border: 1px solid #a50000;"
-                            <% } %>
-                            class="input100"
+							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
                             placeholder="Type your e-mail"
-                            type="email" name="email" id="email" value="<%= oldInput.email %>"
-                        >
+                            type="email" name="email" id="email" value="<%= oldInput.email %>" required>
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
-
-					<div class="wrap-input100 validate-input" data-validate="Password is required">
+					<div class="wrap-input100 validate-input">
 						<span class="label-input100">Password</span>
 						<input 
-                            <% if (errorMessage) { %>
-                                style="border: 1px solid #a50000;"
-                            <% } %>
-                            class="input100"
+							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
                             placeholder="Type your password"
-                            type="password" name="password" id="password" value="<%= oldInput.password %>"
-                        >
+                            type="password" name="password" id="password" value="<%= oldInput.password %>">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
-					
                     <br>
                     <br>
 					<!-- <div class="text-right p-t-8 p-b-31">
@@ -75,56 +41,33 @@
 							Forgot password?
 						</a>
 					</div> -->
-					
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn">
-								Login
-							</button>
+							<button class="login100-form-btn">Login</button>
 						</div>
 					</div>
-
-					<div class="txt1 text-center p-t-54 p-b-20">
-						<span>
-							Or Sign In Using
-						</span>
+					<div class="txt1 text-center p-t-35 p-b-15">
+						<span>Or Sign In Using</span>
 					</div>
-
 					<div class="flex-c-m">
 						<a href="/login/federated/facebook" class="login100-social-item bg1">
 							<i class="fa fa-facebook"></i>
 						</a>
-
 						<a href="#" class="login100-social-item bg2">
 							<i class="fa fa-twitter"></i>
 						</a>
-
 						<a href="/login/federated/google" class="login100-social-item bg3">
 							<i class="fa fa-google"></i>
 						</a>
 					</div>
-
-                    <div class="flex-c-m p-t-54">
-                        <% if (errorMessage) { %>
-                            <div class="popout error-message"><%= errorMessage %></div>
-                        <% } %>
-                    </div>
-
 					<div class="flex-col-c">
-						<span class="txt1 p-b-17">
-							Or
-						</span>
-
-						<a style="text-decoration: none;" href="/signup" class="txt2">
-							Sign Up
-						</a>
+						<span class="txt1 p-b-12">Or</span>
+						<a style="text-decoration: none;" href="/signup" class="txt2">Sign Up</a>
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
-
-    <div id="dropDownSelect1"></div>
     
 <%- include('../includes/end.ejs') %>
