--- a/views/user/edit-match.ejs
+++ b/views/user/edit-match.ejs
@@ -2,9 +2,9 @@
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/match.css">
     <link rel="stylesheet" href="/css/add-match.css">
-    
+    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/util.css">
 </head>
-
 
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script>
@@ -17,75 +17,82 @@
 <body>
    <%- include('../includes/navigation.ejs') %>
     <main>
-        
+        <% if (errorMessage) { %>
+            <div class="flex-c-m">
+                <div class="popout error-message"><%= errorMessage %></div>
+            </div>
+        <% } %>
         <div class="container">
             <div class="card">
-                <h2 class="card-heading">
-                    Create your match!
-                </h2>
+                <h2 class="card-heading">Edit this match!</h2>
                 <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_VB3ALHSv6V.json"  background="transparent"  speed="0.2"  style="width: auto; height: auto;"  loop  autoplay></lottie-player>
                 <form class="card-form" action="/<% if (editing) { %>edit-match<% } else { %>add-match<% } %>" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-        
-                    <div class="input">
-                        <input type="text" class="input-field" name="title" id="title" value="<% if (editing) { %><%= match.title %><% } %>" required/>
-                        <label class="input-label">Titolo della partita</label>
+                    <input type="hidden" value="<%= match._id %>" name="matchId">
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Titolo della partita</span>
+                        <input
+							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
+                            value="<% if (editing || hasError) { %><%= match.title %><% } %>"
+                            type="text" name="title" id="title" required>
+                        <span class="focus-input100" data-symbol="&#xf187;"></span>
                     </div>
-                    <div class="input">
-                        <input type="text" class="input-field" name="placeName" id="placeName" value="<% if (editing) { %><%= match.placeName %><% } %>" required />
-                        <label class="input-label">Luogo</label>
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Luogo</span>
+                        <input
+							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
+                            value="<% if (editing || hasError) { %><%= match.placeName %><% } %>"
+                            type="text" name="placeName" id="placeName" required>
+                        <span class="focus-input100" data-symbol="&#xf299;"></span>
                     </div>
-
-                    <div class="input">
-                        <input type="text" class="input-field" name="address" id="address" value="<% if (editing) { %><%= match.address %><% } %>" required />
-                        <label class="input-label">Indirizzo</label>
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Indirizzo</span>
+                        <input
+							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
+                            value="<% if (editing || hasError) { %><%= match.address %><% } %>"
+                            type="text" name="address" id="address" required>
+                        <span class="focus-input100" data-symbol="&#xf196;"></span>
                     </div>
-                    <div class="input">
-                        <input onclick="showDate()" class="input-field" name="time" id="time" value="<% if (editing) { %><%= match.time %><% } %>" required/>
-                        <label class="input-label">Quando?</label>
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Quando?</span>
+                        <input
+							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
+                            onfocus="showDate()"
+                            value="<% if (editing || hasError) { %><%= match.time %><% } %>"
+                            name="time" id="time" required>
+                        <span class="focus-input100" data-symbol="&#xf32e;"></span>
                     </div>
-
-                    <div class="input">
-                        <input type="text" class="input-field" name="totalPlayers" id="totalPlayers" value="<% if (editing) { %><%= match.totalPlayers %><% } %>" required />
-                        <label class="input-label">Numero di giocatori</label>
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Numero di giocatori</span>
+                        <input
+							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
+                            value="<% if (editing || hasError) { %><%= match.totalPlayers %><% } %>"
+                            type="number" name="totalPlayers" id="totalPlayers" step="1" required>
+                        <span class="focus-input100" data-symbol="&#xf212;"></span>
                     </div>
-                    <div class="input">
-                        
-                        <input type="number" class="input-field" name="price" id="price"  value="<% if (editing) { %><%= match.price %><% } %>" step="0.50" required>
-                        <label class="input-label">Prezzo</label>
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Prezzo</span>
+                        <input
+							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
+                            value="<% if (editing || hasError) { %><%= match.price %><% } %>"
+                            type="number" name="price" id="price" step="0.50" required>
+                        <span class="focus-input100" data-symbol="&#xf19a;"></span>
                     </div>
-                    
-                    <div class="input">
-                        
-                        <!-- <textarea class="input-field" name="description" id="description" rows="5"></textarea> -->
-                        <input type="text" class="input-field" name="description" id="description" value="<% if (editing) { %><%= match.description %><% } %>" required/>
-                        <label class="input-label">Descrizione</label>
-
-                        
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Descrizione</span>
+                        <input
+							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
+                            value="<% if (editing || hasError) { %><%= match.description %><% } %>"
+                            type="text" name="description" id="description" required>
+                        <span class="focus-input100" data-symbol="&#xf262;"></span>
                     </div>
-
-                    <% if (editing) { %>
-                        <input type="hidden" value="<%= match._id %>" name="matchId">
-                    <% } %>
-                    
-
                     <div class="action">
-                        <button class="action-button" type="submit" ><% if (editing) { %>Update Match<% } else { %>Add Match<% } %></button>
+                        <button class="action-button" type="submit">Update Match</button>
                     </div>
-
                     <br>
                 </form>
-                
-            </>
+            <div/>
         </div>
-
-
-        
-        <script>today = new Date().toISOString().split(":")[0]+":00";
-            document.getElementById("time").setAttribute("min",today)
-        </script>
-
     </main>
-</body>    
 
 <%- include('../includes/end.ejs') %>
