--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,3 @@
-
-
 h1 {
     margin-top: 20px;
     margin-bottom: 10px;
@@ -31,6 +29,7 @@ a {
     color: #000;
     text-decoration: none;
 }
+
 .heading-3 {
     font-size: 60pt;
 }
@@ -61,6 +60,9 @@ a {
 }
 
 body {
+    height: 100%;
+    min-height: 100%;
+    margin-bottom: -100px;
     background-color: #000;
 }
 
