--- a/views/app/index.ejs
+++ b/views/app/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../includes/head.ejs') %>
-    <!-- link href="https://uploads-ssl.webflow.com/63b53f7abad4713772e1a481/css/ciros-ultra-awesome-site.webflow.ff8fcf80b.css" rel="stylesheet" type="text/css"> -->
     <link rel="stylesheet" href="/css/index.css">
+    
 </head>
 
 <body>
@@ -20,4 +20,7 @@
       <% } %>
     </div>
 
-<%- include('../includes/end.ejs') %>
+    <script src="/js/main.js"></script>
+</body>
+
+</html>
