--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -4,7 +4,18 @@
     </script>
 
     <script src="/js/main.js"></script>
-    
 </body>
+
+<footer class="footer">
+    <div class="row align-items-center justify-content-xl-between">
+        <div class="col-xl-6 m-auto text-center">
+            <div class="copyright">
+                <p>IL-DECIMO</p>
+                <p>by</p>
+                <p>Marcello && Claudio && Ciro</p>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </html>
