--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -28,6 +28,9 @@
                 </li>
             <% } else { %>
                 <li class="main-header__item">
+                    <a class="<%= path === '/myprofile' ? 'active' : '' %>" href="/myprofile">My Profile</a>
+                </li>
+                <li class="main-header__item">
                     <form action="/logout" method="POST">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button type="submit">Logout</button>
@@ -62,6 +65,9 @@
                 <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
             </li>
         <% } else { %>
+            <li class="mobile-nav__item">
+                <a class="<%= path === '/myprofile' ? 'active' : '' %>" href="/myprofile">My Profile</a>
+            </li>
             <li class="mobile-nav__item">
                 <form action="/logout" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
