--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -18,7 +18,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-3 order-lg-2">
                                     <div class="card-profile-image">
-                                    <a href="https://www.flaticon.com/free-icons/football" title="football icons">
+                                    <a title="football icons">
                                         <img src="../img/football-players.png" class="rounded-circle">
                                     </a>
                                     </div>
@@ -50,7 +50,7 @@
                                     </div>
                                 </div>
                                 <div class="text-center">
-                                    <h3>Nome Cognome<span class="font-weight-light">, Età</span></h3>
+                                    <h3><%= user.usrName %><span class="font-weight-light">, Età</span></h3>
                                     <div class="h5 font-weight-300">
                                         <i class="ni location_pin mr-2"></i>Città, Nazione
                                     </div>
