--- a/public/css/reactions.css
+++ b/public/css/reactions.css
@@ -9,10 +9,12 @@
     --active-eye: #313036;
     --active-tear: #76b5e7;
     --active-shadow-angry: #e94f1d;
-    margin: auto;
+    margin: 0;
     margin-top: 8px;
+    padding: 0;
     list-style: none;
     display: flex;
+    justify-content: center;
   }
   .counter li {
     position: relative;
@@ -39,9 +41,11 @@
     --active-eye: #313036;
     --active-tear: #76b5e7;
     --active-shadow-angry: #e94f1d;
-    margin: auto;
+    margin: 0;
+    padding: 0;
     list-style: none;
     display: flex;
+    justify-content: center;
   }
   .feedback li {
     position: relative;
