1) Limitazione numero di sessioni 2) Pagina termini e condizioni + obbligo di conferma 3) Conferma logout con tasto pop-up

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -231,6 +231,24 @@ form {
   cursor: pointer;
 }
 
+.btnLogout {
+  display: inline-block;
+  padding: 0.25rem 1.5rem;
+  text-decoration: none;
+  font: inherit;
+  border: 1px solid #513dff;
+  color: #513dff;
+  background: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btnLogout:hover,
+.btnLogout:active {
+  background-color: #ff2d2d;
+  color: white;
+}
+
 .btn:hover,
 .btn:active {
   background-color: #513dff;
