Migliorato il controllo password e piccole modifiche estetiche

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -245,6 +245,10 @@ iframe {
   padding: 0 7px 0 43px;
 }
 
+.invalid-checkbox {
+  color: red
+}
+
 /*---------------------------------------------*/
 .focus-input100 {
   position: absolute;
