--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,14 @@ form {
   display: inline;
 }
 
+pa {
+	font-family: Poppins-Regular;
+	font-size: 14px;
+	line-height: 1.7;
+	color: #666666;
+	margin: 0px;
+}
+
 .centered {
   text-align: center;
 }
