--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -22,15 +22,15 @@
 						<span class="label-input100">E-mail</span>
 						<input
 							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
-                            placeholder="Type your e-mail"
-                            type="email" name="email" id="email" value="<%= oldInput.email %>" required>
+                            placeholder="Type your e-mail" required
+                            type="email" name="email" id="email" value="<%= oldInput.email %>">
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 					<div class="wrap-input100 validate-input">
 						<span class="label-input100">Password</span>
 						<input 
 							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
-                            placeholder="Type your password"
+                            placeholder="Type your password" required
                             type="password" name="password" id="password" value="<%= oldInput.password %>">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
