--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -22,7 +22,7 @@
                         <span class="label-input100">Username</span>
                         <input
                             class="<%= validationErrors.find(e => e.param == 'usrName') ? 'input100-invalid' : 'input100' %>"
-                            placeholder="Type your Username"
+                            placeholder="Type your Username" required
                             type="string" name="usrName" id="usrName" value="<%= oldInput.usrName %>">
                         <span class="focus-input100" data-symbol="&#xf206;"></span>
                     </div>        
@@ -30,15 +30,15 @@
                         <span class="label-input100">E-mail</span>
                         <input
                             class="<%= validationErrors.find(e => e.param == 'email') ? 'input100-invalid' : 'input100' %>"
-                            placeholder="Type your e-mail"
-                            type="email" name="email" id="email" value="<%= oldInput.email %>" required>
+                            placeholder="Type your e-mail" required
+                            type="email" name="email" id="email" value="<%= oldInput.email %>">
                         <span class="focus-input100" data-symbol="&#xf206;"></span>
                     </div>
                     <div class="wrap-input100 validate-input m-b-23">
                         <span class="label-input100">Password</span>
                         <input 
                             class="<%= validationErrors.find(e => e.param == 'password') ? 'input100-invalid' : 'input100' %>"
-                            placeholder="Type your password"
+                            placeholder="Type your password" required
                             type="password" name="password" id="password" value="<%= oldInput.password %>">
                         <span class="focus-input100" data-symbol="&#xf190;"></span>
                     </div>
@@ -46,15 +46,16 @@
                         <span class="label-input100">Confirm Password</span>
                         <input 
                             class="<%= validationErrors.find(e => e.param == 'confirmPassword') ? 'input100-invalid' : 'input100' %>"
-                            placeholder="Confirm your password"
+                            placeholder="Confirm your password" required
                             type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword %>">
                         <span class="focus-input100" data-symbol="&#xf190;"></span>
                     </div>
                     <div class="validate-input m-t-30" style="text-align: center;">
                         <input 
-                            class="<%= validationErrors.find(e => e.param == 'confirmPassword') ? '' : '' %>"
-                            type="checkbox" required name="acceptTerms" id="acceptTerms">
-                        <a style="text-decoration: none;" href="terms" target="_blank">Accetta i termini e le condizioni!</text>
+                            type="checkbox" name="acceptTerms" id="acceptTerms" required>
+                        <a class="<%= validationErrors.find(e => e.param == 'acceptTerms') ? 'invalid-checkbox' : '' %>" 
+                            style="text-decoration: none;" href="terms" target="_blank">
+                            Accetta i termini e le condizioni!</a>
                     </div>
                     <br>
                     <div class="container-login100-form-btn">
