--- a/views/auth/termsandconditions.ejs
+++ b/views/auth/termsandconditions.ejs
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><%= pageTitle %></title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/util.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" rel="shortcut icon" type="image/x-icon">
+    <link href="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" rel="apple-touch-icon">
 </head>
-<body>
-    <h2><strong>Terms and Conditions</strong></h2>
+<body style="background-image: linear-gradient(45deg, #2f1cbb, #0e3247); color: aliceblue; font-family: Arial, Helvetica, sans-serif;">
+    <%- include('../includes/navigation.ejs') %>
+<h2><strong>Terms and Conditions</strong></h2>
 
 <p>Welcome to ildecimo.it!</p>
 
@@ -35,7 +41,7 @@
     <li>Redistribute content from ildecimo.it</li>
 </ul>
 
-<p>This Agreement shall begin on the date hereof. Our Terms and Conditions were created with the help of the <a href="https://www.termsandconditionsgenerator.com/">Free Terms and Conditions Generator</a>.</p>
+<p>This Agreement shall begin on the date hereof. Our Terms and Conditions were created with the help of the <a style="color: pink;" href="https://www.termsandconditionsgenerator.com/">Free Terms and Conditions Generator</a>.</p>
 
 <p>Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. ildecimo does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of ildecimo,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, ildecimo shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.</p>
 
@@ -130,5 +136,21 @@
 <p>The limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty.</p>
 
 <p>As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.</p>
+<br>
+<br>
+<script src="/js/main.js"></script>
 </body>
+
+<footer class="footer">
+    <div class="row align-items-center justify-content-xl-between">
+        <div class="col-xl-6 m-auto text-center">
+            <div class="copyright">
+               <p><pa>IL-DECIMO</pa></p>
+               <p><pa>by</pa></p>
+               <p><pa>Marcello && Claudio && Ciro</pa></p>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </html>
