--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -5,9 +5,9 @@
     <div class="row align-items-center justify-content-xl-between">
         <div class="col-xl-6 m-auto text-center">
             <div class="copyright">
-                <p>IL-DECIMO</p>
-                <p>by</p>
-                <p>Marcello && Claudio && Ciro</p>
+                <p><pa>IL-DECIMO</pa></p>
+               <p><pa>by</pa></p>
+               <p><pa>Marcello && Claudio && Ciro</pa></p>
             </div>
         </div>
     </div>
