--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -19,12 +19,28 @@
                         </div>
 					<% } %>
                     <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Nome</span>
+                        <input
+                            class="<%= validationErrors.find(e => e.param == 'nome') ? 'input100-invalid' : 'input100' %>"
+                            placeholder="Type your Name" required
+                            type="string" name="nome" id="nome" value="<%= oldInput.nome %>">
+                        <span class="focus-input100" data-symbol="&#xf206;"></span>
+                    </div>        
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Cognome</span>
+                        <input
+                            class="<%= validationErrors.find(e => e.param == 'cognome') ? 'input100-invalid' : 'input100' %>"
+                            placeholder="Type your Surname" required
+                            type="string" name="cognome" id="cognome" value="<%= oldInput.cognome %>">
+                        <span class="focus-input100" data-symbol="&#xf206;"></span>
+                    </div>
+                    <div class="wrap-input100 validate-input m-b-23">
                         <span class="label-input100">Username</span>
                         <input
                             class="<%= validationErrors.find(e => e.param == 'usrName') ? 'input100-invalid' : 'input100' %>"
                             placeholder="Type your Username" required
                             type="string" name="usrName" id="usrName" value="<%= oldInput.usrName %>">
-                        <span class="focus-input100" data-symbol="&#xf206;"></span>
+                        <span class="focus-input100" data-symbol="&#xf209;"></span>
                     </div>        
                     <div class="wrap-input100 validate-input m-b-23">
                         <span class="label-input100">E-mail</span>
@@ -32,7 +48,15 @@
                             class="<%= validationErrors.find(e => e.param == 'email') ? 'input100-invalid' : 'input100' %>"
                             placeholder="Type your e-mail" required
                             type="email" name="email" id="email" value="<%= oldInput.email %>">
-                        <span class="focus-input100" data-symbol="&#xf206;"></span>
+                        <span class="focus-input100" data-symbol="&#xf200;"></span>
+                    </div>
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Telefono</span>
+                        <input
+                            class="<%= validationErrors.find(e => e.param == 'numCell') ? 'input100-invalid' : 'input100' %>"
+                            placeholder="Type your Phone number" required
+                            type="tel" name="numCell" id="numCell" value="<%= oldInput.numCell %>">
+                        <span class="focus-input100" data-symbol="&#xf2be;"></span>
                     </div>
                     <div class="wrap-input100 validate-input m-b-23">
                         <span class="label-input100">Password</span>
