--- a/views/app/match-list.ejs
+++ b/views/app/match-list.ejs
@@ -3,17 +3,16 @@
 
 </head>
 
-<body>
+<body style="background-image: linear-gradient(125deg, #2f1cbb, #114766);">
     <%- include('../includes/navigation.ejs') %>
     <main>
         <% if (ms.length > 0) { %>
             <div class="grid">
             <% for (let match of ms) { %>
-                <article class="card match-item" onclick="location.assign('/matches/<%= match._id %>')">
+                <article class="card match-item" style="background-image: radial-gradient(ellipse at 70%,rgb(255, 255, 255),rgb(0, 255, 0));" onclick="location.assign('/matches/<%= match._id %>')">
                     <header class="card__header">
-                        <h1 class="match__title">
-                            <%= match.title %>
-                        </h1>
+                        <h1 class="match__title"><%= match.title %></h1>
+                        <h2 class="match__playerCount" style="color: #513dff;"><%= match.totalPlayers /2 %> vs <%= match.totalPlayers /2 %></h2>
                     </header>
                     <div class="card__image">
                         <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
